@@ -1,3 +1,9 @@
+2007-07-12  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* experimental/org/jfree/experimental/chart/axis/LogAxis.java
+	(setSmallestValue): Added event notification,
+	(zoomRange): New method override.
+
 2007-07-12  Henry Proudhon  <henry.proudhon@insa-lyon.fr>
 
 	* source/swt/org/jfree/experimental/swt/SWTUtils.java
